Misc refactor and clean up

--- a/app/src/main/res/layout/match_container.xml
+++ b/app/src/main/res/layout/match_container.xml
@@ -1,27 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<RelativeLayout
+<FrameLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:orientation="vertical"
+        android:id="@+id/match_fragment_container"
+        android:layout_below="@id/match_toolbar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        />
 
-    <android.support.v7.widget.Toolbar
-            android:id="@+id/match_toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="?attr/colorPrimary"
-            android:elevation="4dp"
-            android:theme="?attr/actionBarTheme"
-            app:popupTheme="?attr/actionBarPopupTheme"
-            />
-
-    <FrameLayout
-            android:id="@+id/match_fragment_container"
-            android:layout_below="@id/match_toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-
-
-</RelativeLayout>
