--- a/app/src/main/res/layout/match_list_item_content.xml
+++ b/app/src/main/res/layout/match_list_item_content.xml
@@ -12,9 +12,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
+            android:layout_marginStart="8dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp"
+            android:textAppearance="@style/Medium.Bold"
             tools:text="Thursday 10th October"/>
     <TextView
             android:id="@+id/match_list_item_match_location"
