--- a/app/src/main/res/layout/match_content.xml
+++ b/app/src/main/res/layout/match_content.xml
@@ -5,8 +5,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/create_match_content_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:showIn="@layout/match_container">
+        android:layout_height="match_parent">
 
     <android.support.constraint.Guideline
             android:id="@+id/vertical_one"
@@ -191,95 +190,77 @@
             android:text="@string/match_squad_title"/>
 
     <TextView
-            android:id="@+id/match_squad_required_label"
-            android:layout_width="wrap_content"
+            android:id="@+id/match_type_label"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:text="@string/match_type"
             android:layout_marginTop="16dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginStart="8dp"
-            android:textAllCaps="true"
-            android:textAppearance="@style/Body"
-            android:text="@string/match_squad_size_required_label"
             app:layout_constraintStart_toStartOf="@+id/vertical_two"
-            app:layout_constraintTop_toBottomOf="@id/match_squad_section_title"
+            app:layout_constraintEnd_toStartOf="@+id/match_type"
+            app:layout_constraintTop_toBottomOf="@+id/match_squad_section_title"
             />
-    <EditText
-            android:id="@+id/match_squad_size"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:maxWidth="64dp"
-            android:inputType="number"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginStart="8dp"
-            android:singleLine="true"
-            android:textAppearance="@style/Body"
-            app:layout_constraintStart_toEndOf="@+id/match_squad_required_label"
-            app:layout_constraintBaseline_toBaselineOf="@+id/match_squad_required_label"
-            tools:text="10"/>
 
-    <TextView
-            android:id="@+id/match_squad_status"
+    <Spinner
+            android:id="@+id/match_type"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:layout_marginStart="8dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
-            android:textAllCaps="true"
-            android:gravity="center"
-            android:text="@string/match_current_status_label_text"
-            android:textAppearance="@style/Body"
-            app:layout_constraintStart_toStartOf="@+id/vertical_two"
-            app:layout_constraintTop_toBottomOf="@id/match_squad_required_label"/>
+            android:layout_marginEnd="16dp"
+            app:layout_constraintStart_toEndOf="@+id/match_type_label"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/match_squad_section_title"
+            app:layout_constraintBottom_toBottomOf="@+id/match_type_label"
+            tools:entries="@tools:sample/first_names"
+            />
 
     <TextView
             android:id="@+id/match_confirmed_players_count"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginTop="16dp"
             android:gravity="center"
             android:drawableStart="@drawable/ic_sentiment_satisfied"
-            app:layout_constraintStart_toStartOf="@+id/match_squad_size"
-            app:layout_constraintBaseline_toBaselineOf="@id/match_squad_status"
+            app:layout_constraintStart_toStartOf="@+id/vertical_two"
             app:layout_constraintEnd_toStartOf="@+id/match_unknown_players_count"
+            app:layout_constraintTop_toBottomOf="@+id/match_type_label"
             app:layout_constraintHorizontal_chainStyle="spread_inside"
-            tools:text="10"/>
+            tools:text="8/10"
+            />
 
     <TextView
             android:id="@+id/match_unknown_players_count"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
             android:gravity="center"
             android:drawableStart="@drawable/ic_sentiment_neutral"
-            tools:text="2"
+            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/match_type_label"
             app:layout_constraintStart_toEndOf="@+id/match_confirmed_players_count"
-            app:layout_constraintBaseline_toBaselineOf="@id/match_squad_status"
             app:layout_constraintEnd_toStartOf="@+id/match_declined_players_count"
-            app:layout_constraintHorizontal_chainStyle="spread_inside"/>
+            app:layout_constraintHorizontal_chainStyle="spread_inside"
+            tools:text="2"
+            />
 
     <TextView
             android:id="@+id/match_declined_players_count"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="16dp"
-            android:layout_marginBottom="8dp"
             android:gravity="center"
             android:drawablePadding="2dp"
             android:drawableStart="@drawable/ic_sentiment_dissatisfied"
-            tools:text="5"
+            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/match_type_label"
             app:layout_constraintStart_toEndOf="@+id/match_unknown_players_count"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBaseline_toBaselineOf="@id/match_squad_status"
             app:layout_constraintHorizontal_chainStyle="spread_inside"
+            tools:text="5"
             />
 
     <Button
@@ -287,11 +268,14 @@
             android:text="@string/match_update_squad_button_text"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
             android:layout_marginTop="16dp"
-            app:layout_constraintStart_toStartOf="@+id/match_squad_status"
-            app:layout_constraintTop_toBottomOf="@+id/match_squad_status"
+            android:layout_marginStart="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/match_unknown_players_count"
+            app:layout_constraintStart_toStartOf="@+id/vertical_two"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="16dp"/>
+            app:layout_constraintHorizontal_bias="1.0"
+            />
 
     <View
             android:id="@+id/horizontal_divder_view_three"
@@ -301,7 +285,6 @@
             android:layout_marginTop="16dp"
             app:layout_constraintStart_toStartOf="@+id/vertical_one"
             app:layout_constraintTop_toBottomOf="@+id/match_update_squad_button"/>
-
 
 
 </android.support.constraint.ConstraintLayout>
