--- a/app/src/main/res/layout/match_squad_invite_players_layout.xml
+++ b/app/src/main/res/layout/match_squad_invite_players_layout.xml
@@ -3,6 +3,7 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:background="@android:color/white"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -11,7 +12,7 @@
             android:id="@+id/match_squad_not_invited_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:listitem="@layout/match_squad_not_invited_players_list_item"
+            tools:listitem="@layout/match_squad_invite_players_list_item"
             app:layoutManager="android.support.v7.widget.LinearLayoutManager"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
