--- a/app/src/main/res/layout/match_squad_invite_players_list_item.xml
+++ b/app/src/main/res/layout/match_squad_invite_players_list_item.xml
@@ -6,14 +6,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-    <CheckBox
+    <Spinner
             android:id="@+id/uninvited_player_invited_status_checkbox"
             android:layout_centerVertical="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:entries="@array/player_invitation_status"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="16dp"/>
