--- a/app/src/main/res/layout/import_contacts_list_item.xml
+++ b/app/src/main/res/layout/import_contacts_list_item.xml
@@ -7,22 +7,20 @@
     <CheckBox
             android:id="@+id/import_contacts_checkbox"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
-
 
     <TextView
             android:id="@+id/import_contacts_list_item_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/import_contacts_checkbox"
-            android:layout_marginLeft="8dp"
+            android:layout_toEndOf="@id/import_contacts_checkbox"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_centerVertical="true"
             tools:text="Someone's name"/>
-
 
 
 </RelativeLayout>
