--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -19,26 +19,24 @@
         app:layout_constraintTop_toTopOf="parent"
         app:popupTheme="?attr/actionBarPopupTheme" />
 
-    <android.support.constraint.Group
-        android:id="@+id/main_content_group"
+    <ProgressBar
+        android:id="@+id/main_progress_bar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:constraint_referenced_ids="main_content_container,main_bottom_navigation"
+        android:visibility="gone"
         app:layout_constraintBottom_toTopOf="parent"
         app:layout_constraintEnd_toStartOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:visibility="visible" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <FrameLayout
         android:id="@+id/main_content_container"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@+id/main_toolbar"
+        app:layout_constraintBottom_toTopOf="@+id/main_bottom_navigation"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/main_bottom_navigation"/>
-
+        app:layout_constraintTop_toBottomOf="@+id/main_toolbar" />
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/main_bottom_navigation"
@@ -52,14 +50,15 @@
         app:layout_constraintTop_toBottomOf="@+id/main_content_container"
         app:menu="@menu/main" />
 
-    <ProgressBar
-        android:id="@+id/main_progress_bar"
+    <android.support.constraint.Group
+        android:id="@+id/main_content_group"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:visibility="gone"
+        app:constraint_referenced_ids="main_content_container,main_bottom_navigation"
         app:layout_constraintBottom_toTopOf="parent"
         app:layout_constraintEnd_toStartOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:visibility="visible" />
 
 </android.support.constraint.ConstraintLayout>
