--- a/app/src/main/res/layout/player_list_item.xml
+++ b/app/src/main/res/layout/player_list_item.xml
@@ -1,36 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <com.gregmcgowan.fivesorganiser.core.ui.PlayerAvatar
-            android:id="@+id/player_icon"
-            android:layout_width="@dimen/player_list_avatar_size"
-            android:layout_height="@dimen/player_list_avatar_size"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"/>
+        android:id="@+id/player_icon"
+        android:layout_width="@dimen/player_list_avatar_size"
+        android:layout_height="@dimen/player_list_avatar_size"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-            android:id="@+id/player_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            tools:text="Reg"
-            app:layout_constraintTop_toTopOf="@+id/player_icon"
-            app:layout_constraintBottom_toBottomOf="@+id/player_icon"
-            app:layout_constraintLeft_toRightOf="@+id/player_icon"
-            android:layout_marginStart="16dp"/>
+        android:id="@+id/player_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        app:layout_constraintBottom_toBottomOf="@+id/player_icon"
+        app:layout_constraintLeft_toRightOf="@+id/player_icon"
+        app:layout_constraintTop_toTopOf="@+id/player_icon"
+        tools:text="Reg" />
 
     <View
-            android:id="@+id/divider"
-            android:layout_width="wrap_content"
-            android:layout_height="1dp"
-            android:background="@color/grey_400"
-            app:layout_constraintLeft_toLeftOf="@+id/player_icon" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/player_icon"/>
+        android:id="@+id/divider"
+        android:layout_width="wrap_content"
+        android:layout_height="1dp"
+        android:layout_marginTop="8dp"
+        android:background="@color/grey_400"
+        app:layout_constraintLeft_toLeftOf="@+id/player_icon"
+        app:layout_constraintTop_toBottomOf="@+id/player_icon" />
 
 </android.support.constraint.ConstraintLayout>
