--- a/app/src/main/res/layout/select_team_layout.xml
+++ b/app/src/main/res/layout/select_team_layout.xml
@@ -1,196 +1,192 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:layout_editor_absoluteY="25dp"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/pitch_root"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:layout_editor_absoluteX="0dp"
+    tools:layout_editor_absoluteY="25dp">
+
+
+    <include
+        android:id="@+id/player_one"
+        layout="@layout/player_avatar_and_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/player_four"
+        app:layout_constraintHorizontal_chainStyle="spread"
+        app:layout_constraintLeft_toLeftOf="@+id/guideline5"
+        app:layout_constraintRight_toLeftOf="@+id/player_two"
+        app:layout_constraintTop_toTopOf="@+id/guideline" />
+
+    <include
+        android:id="@+id/player_two"
+        layout="@layout/player_avatar_and_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/player_four"
+        app:layout_constraintLeft_toRightOf="@+id/player_one"
+        app:layout_constraintRight_toLeftOf="@+id/player_three"
+        app:layout_constraintTop_toTopOf="@+id/guideline" />
+
+    <include
+        android:id="@+id/player_three"
+        layout="@layout/player_avatar_and_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/player_five"
+        app:layout_constraintLeft_toRightOf="@+id/player_two"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline" />
+
+    <include
+        android:id="@+id/player_four"
+        layout="@layout/player_avatar_and_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="0dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/guideline2"
+        app:layout_constraintLeft_toLeftOf="@+id/guideline5"
+        app:layout_constraintRight_toLeftOf="@+id/player_five"
+        app:layout_constraintTop_toBottomOf="@+id/player_one" />
+
+    <include
+        android:id="@+id/player_five"
+        layout="@layout/player_avatar_and_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/guideline2"
+        app:layout_constraintLeft_toRightOf="@+id/player_four"
+        app:layout_constraintRight_toLeftOf="@+id/guideline6"
+        app:layout_constraintTop_toBottomOf="@+id/player_two" />
+
+    <include
+        android:id="@+id/player_six"
+        layout="@layout/player_avatar_and_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/player_eight"
+        app:layout_constraintLeft_toLeftOf="@+id/guideline5"
+        app:layout_constraintRight_toLeftOf="@+id/player_seven"
+        app:layout_constraintTop_toTopOf="@+id/guideline2"
+        app:layout_constraintVertical_bias="0.505" />
+
+    <include
+        android:id="@+id/player_seven"
+        layout="@layout/player_avatar_and_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/player_ten"
+        app:layout_constraintLeft_toRightOf="@+id/player_six"
+        app:layout_constraintRight_toLeftOf="@+id/guideline6"
+        app:layout_constraintTop_toTopOf="@+id/guideline2"
+        app:layout_constraintVertical_bias="0.505" />
+
+    <include
+        android:id="@+id/player_eight"
+        layout="@layout/player_avatar_and_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="15dp"
+        app:layout_constraintBottom_toTopOf="@+id/guideline4"
+        app:layout_constraintLeft_toLeftOf="@+id/guideline5"
+        app:layout_constraintRight_toLeftOf="@+id/player_nine" />
+
+    <include
+        android:id="@+id/player_nine"
+        layout="@layout/player_avatar_and_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/guideline4"
+        app:layout_constraintLeft_toRightOf="@+id/player_eight"
+        app:layout_constraintRight_toLeftOf="@+id/player_ten" />
+
+    <include
+        android:id="@+id/player_ten"
+        layout="@layout/player_avatar_and_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="0dp"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/guideline4"
+        app:layout_constraintLeft_toRightOf="@+id/player_nine"
+        app:layout_constraintRight_toLeftOf="@+id/guideline6" />
+
+    <android.support.constraint.Guideline
+        android:id="@+id/guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="16dp"
         tools:layout_editor_absoluteX="0dp"
-        android:id="@+id/pitch_root">
-
-
-    <include
-            android:id="@+id/player_one"
-            layout="@layout/player_avatar_and_name"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            app:layout_constraintLeft_toLeftOf="@+id/guideline5"
-            app:layout_constraintRight_toLeftOf="@+id/player_two"
-            android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginRight="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/player_four"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="0dp"
-            app:layout_constraintTop_toTopOf="@+id/guideline"
-            android:layout_marginTop="16dp"
-            app:layout_constraintHorizontal_chainStyle="spread"/>
-
-    <include
-            android:id="@+id/player_two"
-            layout="@layout/player_avatar_and_name"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            app:layout_constraintRight_toLeftOf="@+id/player_three"
-            app:layout_constraintLeft_toRightOf="@+id/player_one"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/player_four"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            app:layout_constraintTop_toTopOf="@+id/guideline"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="0dp"/>
-
-    <include
-            android:id="@+id/player_three"
-            layout="@layout/player_avatar_and_name"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintLeft_toRightOf="@+id/player_two"
-            android:layout_marginRight="16dp"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintBottom_toTopOf="@+id/player_five"
-            app:layout_constraintTop_toTopOf="@+id/guideline"
-            android:layout_marginTop="16dp"/>
-
-    <include
-            android:id="@+id/player_four"
-            layout="@layout/player_avatar_and_name"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            app:layout_constraintRight_toLeftOf="@+id/player_five"
-            android:layout_marginStart="16dp"
-            android:layout_marginLeft="16dp"
-            app:layout_constraintLeft_toLeftOf="@+id/guideline5"
-            app:layout_constraintTop_toBottomOf="@+id/player_one"
-            android:layout_marginTop="0dp"
-            android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/guideline2"/>
-
-    <include
-            android:id="@+id/player_five"
-            layout="@layout/player_avatar_and_name"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            app:layout_constraintLeft_toRightOf="@+id/player_four"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintRight_toLeftOf="@+id/guideline6"
-            android:layout_marginRight="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/player_two"
-            android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/guideline2"/>
-
-    <include
-            android:id="@+id/player_six"
-            layout="@layout/player_avatar_and_name"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            app:layout_constraintRight_toLeftOf="@+id/player_seven"
-            android:layout_marginStart="16dp"
-            android:layout_marginLeft="16dp"
-            app:layout_constraintLeft_toLeftOf="@+id/guideline5"
-            app:layout_constraintTop_toTopOf="@+id/guideline2"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="0dp"
-            app:layout_constraintBottom_toTopOf="@+id/player_eight"
-            app:layout_constraintVertical_bias="0.505"/>
-
-    <include
-            android:id="@+id/player_seven"
-            layout="@layout/player_avatar_and_name"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            app:layout_constraintLeft_toRightOf="@+id/player_six"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintRight_toLeftOf="@+id/guideline6"
-            android:layout_marginRight="16dp"
-            app:layout_constraintTop_toTopOf="@+id/guideline2"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="0dp"
-            app:layout_constraintBottom_toTopOf="@+id/player_ten"
-            app:layout_constraintVertical_bias="0.505"/>
-
-    <include
-            android:id="@+id/player_eight"
-            layout="@layout/player_avatar_and_name"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            app:layout_constraintLeft_toLeftOf="@+id/guideline5"
-            app:layout_constraintRight_toLeftOf="@+id/player_nine"
-            android:layout_marginBottom="15dp"
-            app:layout_constraintBottom_toTopOf="@+id/guideline4"
-            />
-
-    <include
-            android:id="@+id/player_nine"
-            layout="@layout/player_avatar_and_name"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            app:layout_constraintRight_toLeftOf="@+id/player_ten"
-            app:layout_constraintLeft_toRightOf="@+id/player_eight"
-            android:layout_marginBottom="16dp"
-            app:layout_constraintBottom_toTopOf="@+id/guideline4"
-            />
-
-    <include
-            android:id="@+id/player_ten"
-            layout="@layout/player_avatar_and_name"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            app:layout_constraintLeft_toRightOf="@+id/player_nine"
-            app:layout_constraintRight_toLeftOf="@+id/guideline6"
-            android:layout_marginRight="0dp"
-            android:layout_marginBottom="16dp"
-            app:layout_constraintBottom_toTopOf="@+id/guideline4"
-            />
+        tools:layout_editor_absoluteY="16dp" />
 
     <android.support.constraint.Guideline
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/guideline"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_begin="16dp"
-            tools:layout_editor_absoluteY="16dp"
-            tools:layout_editor_absoluteX="0dp"/>
+        android:id="@+id/guideline4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_end="16dp"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="492dp" />
 
     <android.support.constraint.Guideline
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/guideline4"
-            app:layout_constraintGuide_end="16dp"
-            android:orientation="horizontal"
-            tools:layout_editor_absoluteY="492dp"
-            tools:layout_editor_absoluteX="0dp"/>
+        android:id="@+id/guideline5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="16dp"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="0dp" />
 
     <android.support.constraint.Guideline
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/guideline5"
-            android:orientation="vertical"
-            app:layout_constraintGuide_begin="16dp"
-            tools:layout_editor_absoluteY="0dp"
-            tools:layout_editor_absoluteX="16dp"/>
+        android:id="@+id/guideline6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_end="16dp"
+        tools:layout_editor_absoluteX="304dp"
+        tools:layout_editor_absoluteY="0dp" />
 
     <android.support.constraint.Guideline
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/guideline6"
-            android:orientation="vertical"
-            app:layout_constraintGuide_end="16dp"
-            tools:layout_editor_absoluteY="0dp"
-            tools:layout_editor_absoluteX="304dp"/>
-
-    <android.support.constraint.Guideline
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/guideline2"
-            app:layout_constraintGuide_percent="0.5"
-            android:orientation="horizontal"
-            tools:layout_editor_absoluteY="254dp"
-            tools:layout_editor_absoluteX="0dp"/>
+        android:id="@+id/guideline2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.5"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="254dp" />
 
 
 </android.support.constraint.ConstraintLayout>
