--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,7 +9,7 @@
     </style>
 
     <style name="AppTheme" parent="BaseAppTheme">
-
+        <item name="android:statusBarColor">@color/green_700</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
