--- a/matchlist/src/main/res/layout/match_list_item_content.xml
+++ b/matchlist/src/main/res/layout/match_list_item_content.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -99,14 +99,14 @@
         app:layout_constraintTop_toBottomOf="@+id/match_list_item_divider_two"
         tools:text="10 more players needed" />
 
-    <android.support.constraint.Guideline
+    <androidx.constraintlayout.widget.Guideline
         android:id="@+id/match_list_item_start_guideline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintGuide_begin="20dp" />
 
-    <android.support.constraint.Guideline
+    <androidx.constraintlayout.widget.Guideline
         android:id="@+id/match_list_item_end_guideline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -114,4 +114,4 @@
         app:layout_constraintGuide_end="16dp" />
 
 
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
