--- a/app/src/main/res/layout/results.xml
+++ b/app/src/main/res/layout/results.xml
@@ -6,12 +6,12 @@
              android:layout_height="match_parent">
 
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/results_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:visibility="gone"
-            app:layoutManager="android.support.v7.widget.LinearLayoutManager"/>
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
 
     <ProgressBar
             android:id="@+id/results_list_progress_bar"
